--- a/css/main.css
+++ b/css/main.css
@@ -74,10 +74,13 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding: 1em; }
   body h2 h3 {
-    font-family: "Times New Roman", Times, serif;
+    font-family: "Times New Roman",
+ Times,
+ serif;
     font-weight: 300; }
   body p {
-    font-family: "serif,Times New Roman", Times; }
+    font-family: "serif,Times New Roman",
+ Times; }
 
 .container {
   max-width: 100%;
@@ -235,8 +238,7 @@ ul {
   .apply input {
     margin: 0 auto 5px auto; }
   .body {
-    background-position: center;
-    background-size: cover; }
+    
   .gallery-grid {
     display: grid;
     grid-template-columns: 1fr;
