--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ hr {
 
 body {
   background: #727272;
-  background-image: url("../img/bg.jpg");
+  background-image: url("../img/bg-min.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
